tm_custom/log/build_2024-05-10_17-57-12/arm_subscriber/stderr.log
  File "/home/rslomron/MoMa/tm_custom/install/arm_subscriber/lib/python3.10/site-packages/arm_subscriber/safety_node.py", line 6
    import '/home/rslomron/MoMa/tm_custom/src/arm_subscriber/arm_subscriber/threshold' as penis
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

